--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cryptography==38.0.1
 dnspython==2.2.1
 ecdsa==0.18.0
 email-validator==1.3.0
+engineering-notation==0.6.0
 env==0.1.0
 fastapi==0.85.0
 greenlet==1.1.3
@@ -22,7 +23,7 @@ Mako==1.2.3
 MarkupSafe==2.1.1
 orjson==3.8.0
 passlib==1.7.4
-psycopg2==2.9.3
+psycopg2==2.9.4
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.10.2
@@ -36,8 +37,9 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
-starlette==0.20.4
-typing_extensions==4.3.0
+starlette==0.21.0
+tk-tools==0.16.0
+typing_extensions==4.4.0
 ujson==5.5.0
 urllib3==1.26.12
 uvicorn==0.18.3
