--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,8 @@ Mako==1.2.3
 MarkupSafe==2.1.1
 orjson==3.8.0
 passlib==1.7.4
-psycopg2==2.9.4
+psycopg2==2.9.3
+pur==7.0.0
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.10.2
@@ -39,7 +40,7 @@ sniffio==1.3.0
 SQLAlchemy==1.4.41
 starlette==0.20.4
 tk-tools==0.16.0
-typing_extensions==4.4.0
+typing_extensions==4.3.0
 ujson==5.5.0
 urllib3==1.26.12
 uvicorn==0.18.3
