--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,5 +8,11 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
-      - name: say hi to me
-        run: echo "hey man"
+      - name: Install Python
+        uses: action/setup-python@v2
+        with:
+          python-version:'3.10'
+      - name: upgrade pip
+        run: python -m pip install --upgrade pip    
+      - name: install all dependencies
+        run: pip install -r requirements.txt   
