--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install Python
         uses: action/setup-python@v2
         with:
-          python-version:'3.9'
+          python-version: "3.9"
       - name: upgrade pip
         run: python -m pip install --upgrade pip    
       - name: install all dependencies
